Mar 21 2004  devel  Additional tweaks to prism54 avs monitoring
Mar 20 2004  devel  Fixed gpsmap trying to autoscale even with user scales
                    Merged patch from Antonio Eugenio Burriel to enable AVS 
                     headers on current prism54 drivers
                    Merged patch from Scott Taylor for translucent bounding
                     rects in gpsmap
                    Merged another patch from Scott for using terraserver
                     topo maps
Mar 19 2004  devel  Merged earthamap map source support from Ryan Maple
                    Added autoscale map selection to Earthamap and Terraserver
                    Marked Mapblast and Mappoint sources as defunct
                    Added earthamap script to makefile and cvs
                    Removed 'total' networks from legend, left 'visible'.
                     Total didn't make much sense.
                    New gpsmap labeling method, labels now drawn in the order
                     given, added new labels, bssid, ssid, manuf, info,
                     location
                    Tweaked labeling
Mar 18 2004  devel  Fixed expat error
Mar 17 2004  devel  Tweaked gpsmap to error out on no sample points
                    Fixed error string typo in get_ssid
                    Changed monitor mode controls to not nuke most SSIDs since
                     drivers don't seem to mind anymore, also updated prism54
                     and fixed a compile warning on acx100
                    Tweaked configure/makefiles to not allow 'make gpsmap' if
                     it wasn't enabled by configure
Mar 16 2004  devel  Tweaked acx100 source to match acx's new orinoco-esque
                     method
Mar 15 2004  devel  Finished gpsxml-sanitize, util takes a xml files and prints
                     the valid points back to stdout.
                    Fixed sending a removed network as a NETWORK statement
                     during the initial NETWORK enable seed